# local-agent-orchestra

./: .env.example  .gitignore  AGENTS.md  BASELINE-ROADMAP.md  CHANGELOG.md  CONTRIBUTING.md  README.md  REPOSITORY_AUDIT_REPORT.md  SECURITY.md  fix_imports.py  live-ai-testing.md  pyproject.toml
.github/agents/: agentheim-autonomous-engineer.agent.md
.github/codeql/: codeql-config.yml
.github/instructions/: 01-doctrine.md  02-forbidden-behaviours.md  04-AICtx-integration.md  README.md
.github/workflows/: architecture.yml  security.yml
.kimi/: memory.jsonl
.kimi/rules/: 00-priority.md  01-doctrine.md  01-phase-lock.md  04-aictx.md  04-traceability.md  05-docs.md  06-tooling.md  07-chat-output.md
Agent-Team/: README.md
agentheim/: context_ops_impl.py  context_run_ledger.py
config/: config.py
core/: __main__.py  artifact_store.py  error_catalog.py  error_classification.py  errors.py  events.py  json_repair.py  ledger.py  model_registry.py  patching.py  path_security.py  policies.py  public_api.py  resume.py  run_executor.py  run_summary.py  run_view.py  schemas.py  schemas_runtime.py  state_machine.py  tool_invocation.py  tool_protocol.py  workflow_runner.py
core/repo/: __init__.py  command_detect.py  context_pack.py  language_detect.py  redaction.py  scanner.py
devtest/: LIVE_AI_TEST_CHECKLIST.md  all-test-commands.md  run-devtest.ps1
docs/: AGENT_OPERATIONS.md  AICTX_INTEGRATION_PLAN.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLI-COMMANDS.md  CONFIGURATION.md  CONTRIBUTING.md  DEV_TESTING.md  INSTALL.md  README.md  RELEASE_CHECKLIST.md  SAFETY.md  SUPPORT_MATRIX.md  TIER1_CONTRACTS.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/adr/: ADR-001-aictx-integration-contract.md
docs/roadmap/: 00_PROJECT_DOCTRINE.md  03_EXECUTION_MODEL.md  06_PHASED_DEVELOPMENT_PLAN.md  07_SUBSYSTEM_DEFINITIONS.md  08_PROVIDER_AND_MODEL_ARCHITECTURE.md  09_WORKFLOW_RUNTIME_SPEC.md  10_TOOL_AND_POLICY_SYSTEM.md  11_EVENT_AND_LEDGER_ARCHITECTURE.md  17_ARTIFACT_AND_OBSERVABILITY_SPEC.md  AGENT_POCKET_CARD.md
extracted/: SETUP_GUIDE.md
extracted/scripts/: roadmap-check.py
interfaces/: integration_checks.py  readiness.py  run_hooks.py  tool_approval.py
interfaces/api_server/: app.py
interfaces/cli/: cli.py  ctx_commands.py  oci_commands.py  product_commands.py  provider_commands.py
interfaces/common/: __init__.py  run_views.py
interfaces/desktop_ui/: app.py
interfaces/web_ui/: __init__.py  app.py
monitoring/: health.py
multimodal/: generic_openai_vision.py  image.py
presets/: __init__.py  context_maintainer.py
providers/: __init__.py  anthropic.py  aws_bedrock.py  azure_foundry.py  base.py  cohere.py  gemini.py  oci_genai.py  ollama_cloud.py  openai_v1.py  perplexity.py
scripts/: check-agent-instructions.py  live_tool_smoke.py  live_validate.py  log_tokens.py  package_smoke.py  roadmap-check.py
tests/: test_adapters.py  test_agent_protocol.py  test_api_server.py  test_approval_workflow.py  test_artifact_store.py  test_browser_e2e.py  test_browser_tool.py  test_cascading_router.py  test_coding_runtime.py  test_context_ops_impl.py  test_context_ops_paths.py  test_context_packer.py  test_desktop_ui.py  test_distributed.py  test_distributed_transport.py  test_error_catalog.py  test_error_classification.py  test_events.py  test_federation.py  test_federation_transport.py  test_filesystem_tool.py  test_http_tool.py  test_import_linting.py  test_integration_hardening.py  test_interface_isolation.py  test_ledger_checkpoints.py  test_ledger_hash.py  test_ledger_index.py  test_legacy_aictx_reader.py  test_live_regressions.py  test_local_db_tool.py  test_marketplace.py  test_mcp.py  test_mcp_pool.py  test_monitoring.py  test_multimodal.py  test_negative_paths.py  test_oci_commands.py  test_packaging.py  test_path_security.py  (+22 more)
tests/api_server/: test_ctx_routes.py
tests/cli/: test_ctx_commands.py  test_product_commands.py  test_product_runs_open.py  test_product_status.py  test_product_use.py
tests/config/: test_config.py
tests/core/: test_errors.py  test_ledger.py  test_model_registry.py  test_patching.py  test_redaction.py  test_schemas.py
tests/guided_tui/: test_guided_tui.py
tests/memory/: test_backends.py  test_brain.py  test_bus.py  test_embeddings.py  test_episodic.py  test_registry.py  test_semantic.py  test_stress.py  test_tiers.py  test_vector_backend.py
tests/smoke/: test_cli.py  test_experimental_surfaces.py  test_mock_server_providers.py  test_parity.py  test_presets.py  test_workflow_execution.py  test_workflows.py
tests/tools/: test_git_tool.py  test_network_tool.py  test_shell_tool.py
tests/workflow_agents/: test_coding_agents.py  test_command_agents.py  test_docs_maintenance_agents.py  test_documents_agents.py  test_file_org_agents.py  test_github_maintenance_agents.py  test_research_agents.py
tools/: __init__.py  filesystem.py  registry.py  shell.py  tests.py
tools/browser/: __init__.py
tools/filesystem/: __init__.py
tools/git/: __init__.py  github_cli.py
tools/http/: __init__.py
tools/integrations/: __init__.py  mcp_client.py  web_research.py
tools/mcp/: tool_adapter.py
workflows/coding/: provider_map.py  runtime.py
workflows/context_maintainer/: __init__.py  runtime.py  workflow.py
workflows/docs_maintenance/: runtime.py
workflows/documents/: provider_map.py
workflows/research/: runtime.py
(+52 files in other folders)
