[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentheim"
version = "0.1.0"
description = "Local-first, preset-driven AI automation platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Agentheim Contributors" }
]
keywords = ["ai", "agents", "automation", "local-first", "orchestration"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "openai>=1.30.0",
  "pydantic>=2.7.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pyyaml>=6.0.1",
  "fastapi",
  "uvicorn",
  "starlette",
  "requests",
  "beautifulsoup4",
  "filelock",
  "platformdirs",
  "numpy",
  "cryptography>=41.0.0",
  "pathspec>=0.12.0",
  "python-dotenv>=1.0.0",
  "keyring>=25.0.0",
]

[project.optional-dependencies]
desktop = ["pywebview>=5.0", "pystray>=0.19"]
oci = ["oci>=2.120.0"]
aws = ["boto3>=1.34.0"]
google = ["google-auth>=2.29.0"]
dev = [
  "pytest>=8.2.0",
  "pytest-cov",
  "playwright",
]

[project.scripts]
agentheim = "interfaces.cli.cli:main"

[project.urls]
Homepage = "https://github.com/0langa/agentheim"
Repository = "https://github.com/0langa/agentheim"
Documentation = "https://github.com/0langa/agentheim#readme"
Issues = "https://github.com/0langa/agentheim/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = [
  "core*",
  "config*",
  "interfaces*",
  "agents*",
  "memory*",
  "presets*",
  "providers*",
  "tools*",
  "workflows*",
  "agentheim*",
]
exclude = [
  "tests*",
  "Agent-Team*",
  "devtest*",
  "extracted*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not slow'"
markers = [
  "e2e: marks tests as end-to-end (real browser / network calls)",
  "slow: marks tests as slow (stress tests, integration tests, lint checks)",
]
