[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentheim"
version = "1.0.0"
description = "Local-first, preset-driven AI automation platform"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Agentheim Contributors" }
]
maintainers = [
  { name = "Agentheim Maintainers", email = "maintainers@agentheim.dev" }
]
keywords = ["ai", "agents", "automation", "local-first", "orchestration"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "openai>=1.30.0,<2.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "typer>=0.12.3,<1.0.0",
  "rich>=13.7.1,<14.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "starlette>=0.37.0,<1.0.0",
  "requests>=2.32.0,<3.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "filelock>=3.14.0,<4.0.0",
  "platformdirs>=4.2.0,<5.0.0",
  "numpy>=1.26.0,<2.0.0",
  "cryptography>=42.0.0,<44.0.0",
  "pathspec>=0.12.0,<1.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "keyring>=25.0.0,<26.0.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.111.0,<1.0.0", "uvicorn>=0.30.0,<1.0.0", "starlette>=0.37.0,<1.0.0", "jinja2>=3.1.0,<4.0.0"]
desktop = ["pywebview>=5.0,<6.0", "pystray>=0.19,<1.0"]
browser = ["playwright>=1.44.0,<2.0.0"]
mcp = ["mcp>=1.0.0,<2.0.0"]
cloud-aws = ["boto3>=1.34.0,<2.0.0"]
cloud-google = ["google-auth>=2.29.0,<3.0.0"]
cloud-oci = ["oci>=2.120.0,<3.0.0"]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "playwright>=1.44.0,<2.0.0",
  "build>=1.2.0,<2.0.0",
  "twine>=6.2.0,<7.0.0",
]

[project.scripts]
agentheim = "interfaces.cli.cli:main"

[project.urls]
Homepage = "https://github.com/0langa/agentheim"
Repository = "https://github.com/0langa/agentheim"
Documentation = "https://github.com/0langa/agentheim#readme"
Issues = "https://github.com/0langa/agentheim/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = [
  "core*",
  "config*",
  "interfaces*",
  "agents*",
  "federation*",
  "marketplace*",
  "memory*",
  "monitoring*",
  "multimodal*",
  "presets*",
  "providers*",
  "tools*",
  "workflows*",
  "agentheim*",
]
exclude = [
  "tests*",
  "Agent-Team*",
  "devtest*",
  "extracted*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not slow'"
markers = [
  "e2e: marks tests as end-to-end (real browser / network calls)",
  "slow: marks tests as slow (stress tests, integration tests, lint checks)",
]
